cmake_minimum_required(VERSION 3.26)
project(learn_leetcode C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(1_twoSum)
add_subdirectory(2_addTwoNumbers)
add_subdirectory(12_intToRoman)
add_subdirectory(13_romanToInt)
add_subdirectory(228_summaryRanges)
add_subdirectory(1267_countServers)
add_subdirectory(1448_goodNodes)