cmake_minimum_required(VERSION 3.26)
project(learn_leetcode)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(1_twoSum)
add_subdirectory(2_addTwoNumbers)
add_subdirectory(3_lengthOfLongestSubstring)
add_subdirectory(9_isPalindrome)
add_subdirectory(12_intToRoman)
add_subdirectory(13_romanToInt)
add_subdirectory(14_longestCommonPrefix)
add_subdirectory(20_isValid)
add_subdirectory(23_mergeKLists)
add_subdirectory(56_merge)
add_subdirectory(57_insert)
add_subdirectory(228_summaryRanges)
add_subdirectory(823_numFactoredBinaryTrees)
add_subdirectory(1267_countServers)
add_subdirectory(1448_goodNodes)