cmake_minimum_required(VERSION 3.26)
project(learn_leetcode)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(27_removeElement)
add_subdirectory(28_strStr)
add_subdirectory(35_searchInsert)
add_subdirectory(58_lengthOfLastWord)
add_subdirectory(66_plusOne)
add_subdirectory(1921_eliminateMaximum)
add_subdirectory(2511_captureForts)
add_subdirectory(2605_minNumber)